fix misalignments

--- a/app/components/shared/Subtitle/Subtitle.module.css
+++ b/app/components/shared/Subtitle/Subtitle.module.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 1179px) {
   .tabbedPageSubtitle {
     margin-left: 0;
+    width: 667px;
   }
 }
 
