--- a/app/style/PurchaseTickets.less
+++ b/app/style/PurchaseTickets.less
@@ -344,9 +344,11 @@
   &.input-and-unit.error {
     border-bottom: 0;
     background-image: none;
-    width: 100%;
     &:hover {
       border-bottom: 0;
+    }
+    .unit-area {
+      color: var(--error-text-color) !important;
     }
   }
 }
